# app-uc-stack

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
ProjectFiles/: CMakeLists.txt  main.c  message.pb.c  message.pb.h
ProjectFiles/nanopb/: message.pb  message.pb.h
app/: install-dependencies.sh  jest.config.js  package-lock.json  package.json
app/.devcontainer/: devcontainer.json  docker-compose.yml  dockerfile
app/client/: package-lock.json  package.json  vite.config.js
app/client/src/: App.css  App.jsx  socket.jsx
app/client/src/components/: PicoConnectionManager.jsx  showData.jsx
app/coverage/: clover.xml  coverage-final.json  lcov.info
app/coverage/lcov-report/: index.html  index.js.html
app/figs/: arch.drawio
app/server/: package-lock.json  package.json
app/server/src/: message.proto  server.js
app/server/src/cobs/: index.js
app/server/src/cobs/__tests__/: code.tests.js
app/server/src/cobs/premade tests/: code.js
device/: .gitmodules  CMakeLists.txt  host-serial-bridge.sh  readme.md
device/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
device/ProjectFiles/: CMakeLists.txt  main.c
device/ProjectFiles/nanopb/: message.pb.h
device/freertos/: FreeRTOSConfig.h
docs/: architecture.drawio
uc/ProjectFiles/: CMakeLists.txt
uc/ProjectFiles/nanopb/: message.pb.c
